# beancount-tx-cleanup

./: .coveragerc  .gitignore  README.md  justfile  mise.toml  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci-cd.yaml
beancount_tx_cleanup/: cleaner.py  cleaner_test.py  helpers.py  helpers_test.py
src/beancount_tx_cleanup/: __init__.py  cleaner.py  helpers.py  utils.py
tests/: cleaner_test.py  helpers_test.py  test_utils.py
