[project]
name = "beancount-tx-cleanup"
version = "0.1.0"
description = "Beancount transaction cleaner"
authors = [{ name = "Jakub Turski", email = "yacoob@ftml.net" }]
dependencies = ["beancount ~=2.3", "pydantic ~=2.8"]
readme = "README.md"
requires-python = "~=3.10"
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/beancount_tx_cleanup"]

[tool.rye]
managed = true
dev-dependencies = ["pytest~=8.2"]
