[project]
name = "beancount-tx-cleanup"
version = "0.1.1"
description = "Beancount transaction cleaner"
readme = "README.md"
authors = [{ name = "Jakub Turski", email = "yacoob@ftml.net" }]
dependencies = ["beancount ~=2.3", "pydantic ~=2.8"]
requires-python = ">=3.11"

[project.urls]
Repository = "https://github.com/yacoob/beancount-tx-cleanup"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
managed = true
dev-dependencies = [
  "basedpyright~=1.15.1",
  "beancount-stubs~=0.1.4",
  "pytest~=8.2",
  "pytest-cov~=5.0",
]

[tool.ruff.format]
quote-style = 'single'

[tool.pyright]
venvPath = '.'
venv = ".venv"
